# boulder-d-legacy

./: .gitignore  .gitmodules  README.md  dub.json  licenses.sh  mason.yml  meson.build  nano-path-test.yml  stone.yml  zlib-path-test.yml
.github/workflows/: d.yml
container/container/container/container/: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  dscanner.ini  dub.json  meson.build
container/container/container/container/.github/workflows/: d.yml
container/container/container/container/scripts/: build.sh  test.sh
container/container/container/container/source/: main.d
container/container/container/container/source.old/: main.d
container/container/container/container/source.old/moss/container/: package.d
container/container/container/container/source/moss/container/: context.d  device.d  fakeroot.d  filesystem.d  mapping.d  mounts.d  overlay.d  package.d  process.d  slist.d
container/container/container/container/source/moss/systemd/: package.d
container/container/container/container/source/moss/systemd/nspawn/: package.d
data/: default-x86_64.conf  environment.in  licenses.list  meson.build  recipeTemplate.yml
data/macros/: aarch64.yml  base.yml  x86.yml  x86_64.yml
data/macros/actions/: autotools.yml  cargo.yml  cmake.yml  meson.yml  misc.yml  pgo.yml  python.yml  rust.yml
data/macros/arch/: aarch64.yml  base.yml  x86.yml  x86_64-stage1.yml  x86_64.yml
data/macros/arch/emul32/: x86_64.yml
data/macros/emul32/: x86_64.yml
scripts/: build.sh
source/: main.d  meson.build
source/boulder/: buildjob.d  controller.d  environment.d  main.d  meson.build  upstreamcache.d
source/boulder/cli/: buildCommand.d  build_command.d  chroot_command.d  cmdbuild.d  cmdchroot.d  cmddeletecache.d  cmdnew.d  deletecache_command.d  new_command.d  package.d  update_command.d  versionCommand.d  version_command.d
source/boulder/stages/: build_package.d  chroot_package.d  clean_root.d  configure_root.d  create_root.d  fetch_upstreams.d  install_root.d  package.d  populate_root.d  share_upstreams.d  sync_artefacts.d
source/chef/: meson.build  metadata.d  package.d
source/chef/metadata/: basic.d  github.d  package.d
source/container/: context.d  fakeroot.d  filesystem.d  main.d  mapping.d  meson.build  package.d  process.d  usermapping.d
source/container/cli/: create.d  package.d  remove.d  run.d
source/drafter/: meson.build  package.d
source/drafter/license/: engine.d  package.d
source/drafter/metadata/: basic.d  github.d  package.d
source/mason/: meson.build  package.d
source/mason/cli/: build_command.d  cmdbuild.d  package.d
source/moss/cli/: buildCommand.d  processor.d  versionCommand.d
